Related: fdo#43867 header styles contain content like document body

If we have to acquire before inserting content into a document, then we also
need to acquire before copying styles into a document, seeing as header styles
contain content, so whatever can happen during content insertion can happen
during the content insertion of the contents of a header style.
(cherry picked from commit 7dc25878c1310a1de6d3c87c88404b151bad21fc)

Signed-off-by: Michael Stahl <mstahl@redhat.com>