sw/source/core/doc/docnew.cxx
@@ -1110,14 +1110,9 @@ SfxObjectShell* SwDoc::CreateCopy(bool bCallInitNew ) const
 {
     SwDoc* pRet = new SwDoc;
 
-    pRet->ReplaceDefaults(*this);
-
-    pRet->ReplaceCompatabilityOptions(*this);
-
-    pRet->ReplaceStyles(*this);
-
-    // we have to use pointer here, since the callee has to decide whether SfxObjectShellLock or SfxObjectShellRef should be used
-    // sometimes the object will be returned with refcount set to 0 ( if no DoInitNew is done )
+    // we have to use pointer here, since the callee has to decide whether
+    // SfxObjectShellLock or SfxObjectShellRef should be used sometimes the
+    // object will be returned with refcount set to 0 ( if no DoInitNew is done )
     SfxObjectShell* pRetShell = new SwDocShell( pRet, SFX_CREATE_MODE_STANDARD );
     if( bCallInitNew )
     {
@@ -1126,6 +1121,12 @@ SfxObjectShell* SwDoc::CreateCopy(bool bCallInitNew ) const
     }
 
     pRet->acquire();
+
+    pRet->ReplaceDefaults(*this);
+
+    pRet->ReplaceCompatabilityOptions(*this);
+
+    pRet->ReplaceStyles(*this);
 
     //copy content
     pRet->Paste( *this );
